...
      .accessibilityIdentifier("favorite-list")
      .toolbarBackground(.yellow, for: .navigationBar)
      .toolbarBackground(.visible, for: .navigationBar)
      .navigationDestination(for: Recipe.self) { recipe in
        FavoriteDetailView(recipe: recipe)
      }
      .navigationTitle("Favorited Recipes")
      .searchable(text: $favoriteSearch, prompt: "Search for your favorited recipes")
      .listStyle(.plain)
    }
    .overlay {
      if favoriteRecipeVM.favorite.isEmpty, favoriteSearch.isEmpty {
        DefaultFavoritesView()
      }
...
